Final version // CSS Fixed, better color for visibility, // Social Button Added // Fully Responsive

--- a/TPNTIC/default.css
+++ b/TPNTIC/default.css
@@ -1,13 +1,16 @@
 body {
-  background-color: #546E7A;
+  background-image: url(img/font.jpg);
+  background-position: fixed;
   margin: 1vh 1.5vw;
+  width: auto;
+  display: block;
 }
 
 ul {
-  font-size: 5vh;
+  font-size: 4vh;
   font-family: 'Sniglet';
-  color: #FFD600;
-  text-shadow: 1px 1px #000;
+  color: #FF5722;
+  text-shadow: 2px 2px #000;
   margin-top: 0px;
   margin-bottom: 0px;
   margin-left: -10px;
@@ -15,12 +18,13 @@ ul {
 
 h1 {
   font-family: 'Marko One';
-  color: #FF4E04;
+  color: #01812C;
   text-shadow: 1px 1px #FFF;
   position: relative;
-  margin: 0px;
+  margin: auto;
   padding: 0px;
-  font-size: 8vh;
+  font-size: 6vh;
+  max-width: 80%;
 }
 
 p {
@@ -28,17 +32,17 @@ p {
   margin-left: 1vw;
   margin-right: 1vw;
   text-align: justify;
-  font-size: 5vh;
+  font-size: 4vh;
   text-align: left;
-  color: #FFD600;
-  text-shadow: 1px 1px #000;
+  color: #FFF;
+  text-shadow: 2px 2px #000;
 }
 
 ol {
-  font-size: 5vh;
+  font-size: 4vh;
   font-family: 'Sniglet';
-  color: #FFD600;
-  text-shadow: 1px 1px #000;
+  color: #FFF;
+  text-shadow: 2px 2px #000;
   text-align: left;
 }
 
@@ -54,6 +58,26 @@ aside {
   float: right;
 }
 
+form {
+  margin: auto;
+}
+
+input {
+  width: 40%;
+  margin: auto;
+  text-align: center;
+  display: block;
+  float: center;
+}
+
+textarea {
+  width: 40%;
+  margin: auto;
+  text-align: center;
+  display: block;
+  float: center;
+}
+
 .screen {
   min-width: 50%;
   max-width: 80%;
@@ -62,16 +86,18 @@ aside {
 }
 
 .logo {
-  width: 10.5vw;
+  display: flex;
+  width: 10vw;
   border-radius: 15%;
 }
 
 .onglet {
   border-top-left-radius: 20%;
   border-top-right-radius: 20%;
-  display: inline-block;
+  display: flex;
+  justify-content: space-around;
+  align-self: center;
   margin: auto;
-  padding: 0.1vw;
   border: 1px solid white;
   cursor: pointer;
 }
@@ -79,36 +105,34 @@ aside {
 .onglet_0 {
   font-family: 'Joti One';
   color: #FFF;
-  font-size: 4vh;
+  font-size: 3vh;
   padding: 0.1vw;
-  background: #05293F;
+  background-color: rgba(80,170,130, 0.2);
   border-bottom: 1px solid white;
   box-shadow: 0px -3px 11px 2px rgba(255, 255, 255, 0.75);
 }
 
 .onglet_1 {
   font-family: 'Joti One';
-  font-size: 4vh;
-  color: #FF4E04;
+  font-size: 3vh;
+  color: #FFB300;
   text-shadow: 1px 1px #000;
-  background: #6DC0A6;
+  background-color: rgba(1, 129, 44, 0.2);
   border-bottom: 0px solid white;
   padding-bottom: 0.1vh;
   box-shadow: 0px -3px 11px 2px rgba(255, 255, 255, 0.75);
 }
 
 .contenu_onglet {
-  background: url("img/font.jpg");
+  background-color: rgba(1, 129, 44, 0.2);
   text-align: center;
-  background-color: #74BF7C;
   border:1px solid white;
   margin-top: -1px;
   padding: 1%;
   display: none;
-  border-top-right-radius: 2%;
   border-bottom-left-radius: 3%;
   border-bottom-right-radius: 3%;
-  box-shadow: 0px 3px 11px 5px rgba(255, 255, 255, 0.75);
+  box-shadow: 0px 3px 11px 5px rgba(255, 255, 255, 0.85);
 }
 
 .form {
@@ -118,8 +142,9 @@ aside {
 }
 
 .info {
-  font-size: 5vh;
+  font-size: 3vh;
   width: 40%;
+  max-width: 80%;
   margin: auto;
   text-align: center;
   display: block;
@@ -134,6 +159,7 @@ aside {
 }
 
 .required {
+  font-size: 3vh;
   color: #FF1919;
   text-shadow: 1px 1px #000;
 }
@@ -142,12 +168,13 @@ aside {
   margin-bottom: 0.5vh;
 }
 
+.social {
+  width: 2vw;
+}
+
 #content {
-  width: 65%;
-  margin: 1vh auto 1vh auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  width: 65vw;
+  margin: 1vh auto;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 15%;
 }
